# PrivateChats

./: .gitignore  CMakeLists.txt  Install.sh  README.md  main.cpp  settings.gradle.kts
DB/: Client.cpp  Client.h  DB.cpp  DB.h  Encryption.cpp  Encryption.h
DB/Enc?/: Encryption.cpp  Encryption.h
DB/Encryption/: Encryption.cpp
DB/Operations/: Admin.cpp  Admin.h  Client.cpp  Client.h
Requests/: Requests.cpp  Requests.h
Server/: Server.cpp  Server.h  Worker.cpp  Worker.h
app/: build.gradle.kts
app/app/src/androidTest/java/com/example/privatechats/: ExampleInstrumentedTest.java
app/app/src/main/java/com/example/privatechats/: LoginActivity.java  MainActivity.java  Operations.java  SplashScreenActivity.java
app/app/src/main/java/com/example/privatechats/Operations/: AES.java
app/app/src/main/java/com/example/privatechats/database/: MessengerContract.java  MessengerDbHelper.java
app/app/src/main/java/com/example/privatechats/ui/home/: HomeFragment.java  HomeViewModel.java
app/app/src/main/java/com/example/privatechats/ui/home/chat/: Chat.java  ChatDetailActivity.java  MessageAdapter.java
app/app/src/main/java/com/example/privatechats/ui/home/contacts/: ContactAdapter.java  ContactsActivity.java
app/app/src/main/java/com/example/privatechats/ui/settings/: SettingsFragment.java
app/app/src/main/java/com/example/privatechats/ui/slideshow/: SlideshowViewModel.java
app/app/src/main/res/drawable/: chat_bubble_background_left.xml  ic_menu_chats.xml  ic_menu_info.xml  rounded_chat_item.xml  rounded_edittext_background.xml
app/app/src/main/res/drawable-v34/: rounded_edittext_background.xml
app/app/src/main/res/layout/: activity_chat_detail.xml  activity_contacts.xml  activity_login.xml  app_bar_main.xml  chat_item.xml  fragment_home.xml  item_contact.xml  item_message_left.xml  item_message_right.xml
app/app/src/main/res/navigation/: mobile_navigation.xml
app/app/src/test/java/com/example/privatechats/: ExampleUnitTest.java
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/privatechats/: TcpClientService.java
app/src/main/java/com/example/privatechats/Operations/: Operations.java  RSA.java
app/src/main/java/com/example/privatechats/database/: MessengerContract.java
app/src/main/java/com/example/privatechats/ui/home/chat/: Chat.java  ChatAdapter.java  Message.java
app/src/main/java/com/example/privatechats/ui/home/contacts/: Contact.java
app/src/main/java/com/example/privatechats/ui/settings/: SettingsViewModel.java
app/src/main/java/com/example/privatechats/ui/slideshow/: SlideshowFragment.java
app/src/main/res/drawable/: chat_bubble_background_right.xml
app/src/main/res/layout/: fragment_chat_detail.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
server/PortMaster/: CMakeLists.txt  main.cpp
server/PortMaster/DB/: DB.h  Database.cpp  Database.h
server/PortMaster/DB/Encryption/: AES.cpp  AES.h  Encryption.cpp  Encryption.h  RSA.cpp  RSA.h
server/PortMaster/DB/Operations/: Admin.cpp  Admin.h  Client.cpp  Client.h
server/PortMaster/Requests/: Requests.cpp  Requests.h
server/PortMaster/Server/: Server.cpp  Server.h  Worker.cpp  Worker.h
